--- a/styles/components/_advantages.scss
+++ b/styles/components/_advantages.scss
@@ -269,10 +269,12 @@
         }
 
         &:nth-child(3) {
-            left: 47px;
+            top: -140px;
+            left: -183px;
         }
 
         &:nth-child(4) {
+            top: -140px;
             left: 177px;
             
             @media #{$tablet} {
@@ -281,7 +283,7 @@
         }
 
         &:nth-child(5) {
-            right: 406px;
+            right: 534px;
 
             @media #{$tablet} {
                 // display: none;
