--- a/styles/select-apartment.scss
+++ b/styles/select-apartment.scss
@@ -6,4 +6,5 @@
 @import "components/header";
 @import "components/burger";
 @import "components/select";
+@import "components/calc-ipoteka";
 @import "components/footer";
