--- a/styles/card.scss
+++ b/styles/card.scss
@@ -9,4 +9,5 @@
 @import "components/utp";
 @import "components/advantages";
 @import "components/scheme";
+@import "components/calc-ipoteka";
 @import "components/footer";
